updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello, my name is Iqra Usman and i am taking this bootcamp because i am passionate about learning to code.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Brooklyn, NY</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My hobbies include: DIY Projects, learning, and swimming  </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream would be a place that values hardwork and has opportunities for growth within the company. </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Plano, Texas</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The idea that i can use my creativity and problem-solving skills to create work that can be used by people everyday.</p>
     </section>
 
     <footer id="footer">
