--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>Brooklyn, NY</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>My hobbies include: DIY Projects, learning, and swimming  </p>
+      <p>My hobbies include: DIY Projects, learning, and swimming.  </p>
       <h1>What's your dream job?</h1>
       <p>My dream would be a place that values hardwork and has opportunities for growth within the company. </p>
       <h1>Where do you live?</h1>
       <p>Plano, Texas</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>The idea that i can use my creativity and problem-solving skills to create work that can be used by people everyday.</p>
+      <p>The idea that i can use my creativity and problem-solving skills to create work that can be used by people everyday makes me want to pursue web development.</p>
     </section>
 
     <footer id="footer">
